--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 *.iws
 .idea
 .attach_pid*
+out/
 
 ### Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -50,3 +51,9 @@ local.properties
 ### Queue files
 *.cq4t
 *.cq4
+
+### Gradle
+build/
+
+### VS Code
+.vscode/
