--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 }
 
 dependencies {
-    compile 'net.openhft:chronicle-core:2.17.7'
+    compile project(':chronicle-core')
     compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'com.intellij:annotations:12.0'
     testCompile 'junit:junit:4.12'
@@ -56,4 +56,11 @@ publishing {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+}
+
+test {
+    def javaVendor = System.properties['java.vendor']
+    if (javaVendor.toLowerCase().contains('openj9')) {
+        jvmArgs '-XX:+CompactStrings' // required for StringUtils on OpenJ9
+    }
 }
