--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,7 @@
  */
 
 rootProject.name = 'chronicle-bytes'
+
+include ':chronicle-core'
+
+project(':chronicle-core').projectDir = new File(rootDir, "../chronicle-core")
